fixed some layout issues

--- a/app/assets/stylesheets/components/_card-moving.scss
+++ b/app/assets/stylesheets/components/_card-moving.scss
@@ -35,7 +35,3 @@
   }
 }
 
-
-.masked-reverse {
-  clip-path: polygon(100% 0, 59% 0, 35% 0, 60% 52%, 35% 100%, 100% 100%);
-}
