--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -475,6 +475,36 @@ p {
 .masked {
   clip-path: polygon(0 0, 59% 0, 35% 0, 60% 52%, 35% 100%, 0 100%);
   margin-right: -630px;
+
+  i {
+
+      position: absolute;
+      top: 201px;
+      z-index: 14;
+      left: 13px;
+      font-size: 50px;
+      color: white;
+      text-shadow: 3px 4px 0px rgba(0,0,0,0.5);
+  
+  }
+}
+
+
+.masked-reverse {
+  clip-path: polygon(100% 0, 59% 0, 35% 0, 60% 52%, 35% 100%, 100% 100%);
+
+  i {
+
+    position: absolute;
+    top: 201px;
+    z-index: 14;
+    right: 27px;
+    font-size: 50px;
+    color: white;
+    text-shadow: 3px 4px 0px rgba(0,0,0,0.5);
+
+}
+
 }
 
 .friend {
